fix: password regex

--- a/create-account.html
+++ b/create-account.html
@@ -27,7 +27,7 @@
                     <input type="email" placeholder="email address" required class="email">
                     <input type="password" placeholder="password" required class="password">
                     <div class="showHide hide"></div>
-                    <span class="password-strength"></span>
+                    <span class="password-tip"></span>
                 </form>
                 <button type="submit" href="#" class="trial-btn">CLAIM YOUR FREE TRIAL</button>
                 <span class="terms">By clicking the button, you are agreeing to our <b>Terms and services</b></span>
